Fixed the List on Schere.html; fixed images not showing up

--- a/schere.css
+++ b/schere.css
@@ -1,5 +1,5 @@
-.body{
-  background-color: rgb(0, 0, 0);
+body{
+  background-color: #808080;
 } 
 
 .grid-container {
@@ -28,6 +28,10 @@
   grid-row: 2 / 3;
   grid-column: 3 / 5;
   border: solid;
+}
+
+.grid-item-2 li{
+  text-align: left;
 }
 
 .grid-item-3 {
